--- a/index.html
+++ b/index.html
@@ -18,7 +18,45 @@
 
     <!-- linea divisoria -->
     <hr>
-    
+
+    <!-- first section -->
+    <section>
+        <h2>Le mie spese</h2>
+        <table>
+            <tbody>
+                <th><strong>Numero</strong></th>
+                <th><strong>Descrizione</strong></th>
+                <th><strong>Costo</strong></th>
+            </tbody>
+
+            <tbody>
+                <td>1</td>
+                <td>Biglietto Aereo</td>
+                <td>120€</td>
+            </tbody>
+
+            <tbody>
+                <td>1</td>
+                <td>Biglietto Aereo</td>
+                <td>120€</td>
+            </tbody>
+
+            <tbody>
+                <td>1</td>
+                <td>Biglietto Aereo</td>
+                <td>120€</td>
+            </tbody>
+
+            <tbody>
+                <td>Totale</td>
+                <td></td>
+                <td>360€</td>
+            </tbody>
+        </table>
+    </section>
+
+    <!-- linea divisoria -->
+    <hr>
     
 </body>
 </html>
