--- a/index.html
+++ b/index.html
@@ -57,6 +57,20 @@
 
     <!-- linea divisoria -->
     <hr>
+
+    <!-- second section -->
+    <section>
+        <h3>Cose da fare</h3>
+        <ul>
+            <li>Visitare la Tower of London</li>
+            <li>Visitare Greenwich</li>
+            <li>Ascoltare un artista di strada a Covent Garden</li>
+            <li>Mangiare il tipico Fish and Chips Inglese</li>
+        </ul>
+    </section>
+
+    <!-- linea divisoria -->
+    <hr>
     
 </body>
 </html>
